WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63862
[GTK]
r90148
did not apply to X11 platforms in WebKit1
https://bugs.webkit.org/show_bug.cgi?id=63862
Summary
[GTK] r90148 did not apply to X11 platforms in WebKit1
Martin Robinson
Reported
2011-07-02 11:37:41 PDT
r90148
fixed a crash for X11 platforms using nspluginwrapper, but it did not sufficiently cover X11 in the WebKit1 case.
Attachments
Patch
(1.38 KB, patch)
2011-07-02 11:46 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-07-02 11:46:36 PDT
Created
attachment 99555
[details]
Patch
WebKit Review Bot
Comment 2
2011-07-04 11:04:09 PDT
Comment on
attachment 99555
[details]
Patch Clearing flags on attachment: 99555 Committed
r90368
: <
http://trac.webkit.org/changeset/90368
>
WebKit Review Bot
Comment 3
2011-07-04 11:04:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug